# cookiecutter-pypackage

./: cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: python-app.yml
{{cookiecutter.project_slug}}/docs/: conf.py  modules.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
